--- a/twitter-clone/src/components/Sidebar/SideBarOption/SideBarOption.css
+++ b/twitter-clone/src/components/Sidebar/SideBarOption/SideBarOption.css
@@ -1,10 +1,24 @@
 .sideBarOption{
     display: flex;
+    width: auto;
     align-items: center;
     cursor: pointer;
     font-weight: normal;
+    font-size: 22px;
 }
 .icon{
-    padding:20px;
+    padding-right:20px;
+    padding-left: 20px;
+    padding-top: 12px;
+    padding-bottom: 12px;
     font-size: 25px;
 }
+.sideBarOption > p{
+    margin-right: 20px;
+}
+.sideBarOption:hover {
+    background-color: #E7E7E8;
+    border-radius: 30px;
+    color:#0F1419 ;
+    transition: color 100ms ease-out;
+  }
