--- a/twitter-clone/src/components/Sidebar/SideBar.css
+++ b/twitter-clone/src/components/Sidebar/SideBar.css
@@ -1,5 +1,5 @@
 .sideBar{
-    flex: 0.3;
+    flex: 0.22;
     
-    border-right: 1px solid black;
+    border-right: 1px solid var(--twitter-background);
 }
