--- a/twitter-clone/src/components/Widget/Widget.css
+++ b/twitter-clone/src/components/Widget/Widget.css
@@ -1,3 +1,38 @@
 .widget{
     flex: 0.3;
+    padding-left:20px;
+}
+.widget__top{
+    margin-left:auto;
+    margin-right:auto;
+    display: flex;
+    align-items: center;
+    background-color : var(--twitter-background);
+    height : 42px;
+    border-radius:100px;
+    padding-left:20px;
+
+}
+.widget__searchicon{
+    color:gray;
+}
+.widget__input{
+    border: none;
+    background-color: var(--twitter-background);
+    margin-left:15px;
+    font-size: 15px;
+}
+
+.widget__container {
+    background-color: var(--twitter-background);
+    border-radius: 20px;
+    padding-left:10px;
+    padding-right:10px;
+}
+
+.widget__container > h2 {
+    font-size: 20px;
+    margin-top:10px;
+    padding-top:20px;
+    padding-left:15px;
 }
