--- a/twitter-clone/src/components/Sidebar/SideBarOption/SideBarOption.css
+++ b/twitter-clone/src/components/Sidebar/SideBarOption/SideBarOption.css
@@ -22,20 +22,26 @@
     border-radius: 30px;
     color:#0F1419 ;
     transition: background-color 100ms ease-out;
-  }
+}
 @media screen and (max-width:1300px)
 {
     .sideBarOption > p{
         display: none;
     }
     .sideBarOption{
-        display: block;
         text-align: center;     
-        margin: 0;
-        width: auto;
+        margin: 0 auto !important;
+        display: block;
+        width: 50px !important;
     }
     .icon{
-        margin: 0;
-        
+        margin: 0 !important;
+        width: 20px !important;
+        padding: 8px !important;
+    }
+    .twitterIcon{
+        display: block !important;
+        margin:0px auto !important;
+        margin-bottom: 15px !important;
     }
 }
