--- a/twitter-clone/src/components/Sidebar/profileInf/SidebarProfileInf.css
+++ b/twitter-clone/src/components/Sidebar/profileInf/SidebarProfileInf.css
@@ -1,18 +1,15 @@
 .sidebarPcontainer{
-    position: absolute;
-    bottom: 8px;
     width: 250px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: auto 0px;
+    margin-top: 20px;
     align-content: center;
     border-radius: 30px;
-    padding: 7px 10px; 
+    padding: 10px ; 
 }
 .sidebarPcontainer:hover{
     background-color: #E9EAEA;
-    
 }
 .sidebarInf{
     display: flex;
