--- a/twitter-clone/src/App.css
+++ b/twitter-clone/src/App.css
@@ -1,6 +1,7 @@
 body{
     --twitter-color: #50b7f5;
     --twitter-background: #e6ecf0;
+    --post-color : #F7F7F7;
 }
 .app {
     display: flex;
