--- a/twitter-clone/src/components/Sidebar/SideBarOption/SideBarOption.css
+++ b/twitter-clone/src/components/Sidebar/SideBarOption/SideBarOption.css
@@ -5,6 +5,7 @@
     font-weight: normal;
     font-size: 22px;
     margin-right: 40px;
+    font-family: 'Quicksand', sans-serif;
 }
 .icon{
     padding-right:20px;
